Improved: Workarounds for running and testing OFBiz under JDK 17 and Gradle 7.6 (OFBIZ-12733)
To be able to run and test (integration) OFBiz under JDK 17 and Gradle 7.6 we
need these workarounds in build.gradle